--- a/.github/workflows/subql_deploy_workflow.yaml
+++ b/.github/workflows/subql_deploy_workflow.yaml
@@ -26,8 +26,8 @@ jobs:
   subql_deploy_workflow:
     runs-on: ubuntu-latest
     env:
-      SUBQL_INDEXER_VERSION: v4.0.4
-      SUBQL_QUERY_VERSION: v2.6.0
+      SUBQL_INDEXER_VERSION: 4.0.4
+      SUBQL_QUERY_VERSION: 2.6.0
       CHAIN_ID: ${{ inputs.chainId }}
       SUBQL_ACCESS_TOKEN: ${{ secrets.accessToken }}
       SUBQL_PROJ_ORG: ${{ inputs.projOrg }}
